<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/darkRed">

    <Button
        android:id="@+id/superhero"
        android:layout_width="198dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/superhero"
        android:text="@string/superString"
        android:textColor="@color/darkRed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="232dp"
        android:layout_height="159dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/movie_icon_1_460x406" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/select"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.365"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/action"
        android:layout_width="195dp"
        android:layout_height="67dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/action"
        android:text="@string/actString"
        android:textColor="@color/darkRed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/superhero" />

    <Button
        android:id="@+id/animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/animation"
        android:text="@string/aniString"
        android:textColor="@color/darkRed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="210dp"
        android:layout_height="63dp"
        tools:layout_editor_absoluteX="133dp"
        tools:layout_editor_absoluteY="583dp" />

</androidx.constraintlayout.widget.ConstraintLayout>